--- a/simple/simple-site.html
+++ b/simple/simple-site.html
@@ -37,7 +37,7 @@
       <div id="divers">
         <!-- div for Digital Clock-->
         <div id="clock" style="display: none">
-          <p>ayo</p>
+          <p id="clockP"></p>
         </div>
 
         <!-- div for ToDoList-->
