--- a/simple/simple-site.html
+++ b/simple/simple-site.html
@@ -37,7 +37,9 @@
       <div id="divers">
         <!-- div for Digital Clock-->
         <div id="clock" style="display: none">
-          <p id="clockP"></p>
+          <p id="clockDate"></p>
+          <p id="clockTime"></p>
+          <p id="clockTimeZone"></p>
         </div>
 
         <!-- div for ToDoList-->
